gccida/g0/record_reg_classes
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:1896:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *modes, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:1930:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:1950:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classes[30]; // [rsp+30h] [rbp-DD0h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:1957:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+D84h] [rbp-7Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:1962:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class pref; // [rsp+DACh] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:1963:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+DB0h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:1984:12: error: expected identifier or '('
 struct op = ops[i]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2158:30: error: use of undeclared identifier 'machine_mode'
win = address_operand( op, ( machine_mode)*( ( unsigned __int8 *)op + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2335:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] == OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2339:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2345:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2349:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] == OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2354:7: error: expected expression
if (  struct reg_pref ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2367:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)op + 2))) ) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2371:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] != OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2376:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2405:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] == OP_OUT ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2409:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/regclass.c:2415:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_reg_classes/src/obj/regclass.o] Error 1
